portfolio.html: fixed up the water framerate and the z-indexing of the flip cards

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -62,7 +62,7 @@ body {
 .projectCard {
     margin: 25px;
 
-    transition: 1s, visibility 0s;
+    transition: 1s, visibility 0s, transform 0s;
     transform-style: preserve-3d;
     z-index: 2;
 
